fix responsivness issues and change layout on mobile for related-posts

--- a/src/styles/components/related-posts/_related-post-list.scss
+++ b/src/styles/components/related-posts/_related-post-list.scss
@@ -2,7 +2,7 @@ $block: 'related-post-list';
 
 .#{$block} {
   display: grid;
-  grid-row-gap: get-spacing(2);
+  grid-gap: get-spacing(2);
   grid-template-columns: 1fr;
   margin: 0 auto;
   max-width: 1000px;
@@ -11,7 +11,7 @@ $block: 'related-post-list';
 @include media-breakpoint-up(sm) {
   .#{$block} {
     grid-gap: get-spacing(2);
-    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
